FIxed gap + added shine transition

--- a/style.css
+++ b/style.css
@@ -235,6 +235,37 @@ button:hover {
   cursor: pointer;
 }
 
+/* Shine */
+img,
+video,
+iframe {
+  -webkit-mask-image: linear-gradient(
+    45deg,
+    #000 25%,
+    rgba(0, 0, 0, 0.2) 50%,
+    #000 75%
+  );
+  mask-image: linear-gradient(
+    45deg,
+    #000 25%,
+    rgba(0, 0, 0, 0.2) 50%,
+    #000 75%
+  );
+  -webkit-mask-size: 800%;
+  mask-size: 800%;
+  -webkit-mask-position: 0;
+  mask-position: 0;
+}
+
+img:hover,
+video:hover,
+iframe:hover {
+  transition: mask-position 1.25s ease, -webkit-mask-position 1.25s ease;
+  -webkit-mask-position: 120%;
+  mask-position: 120%;
+  opacity: 1;
+}
+
 .icon {
   width: 2rem;
   height: auto;
